welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:2: error: ';' expected but ',' found.
	for (p<-1 to 3) {baisseBrosse(), avance()};
                                       ^MethodsDogHouse:4: error: ';' expected but ',' found.
	for (p<-1 to 3) {baisseBrosse(), avance()};
                                       ^MethodsDogHouse:6: error: ';' expected but ',' found.
	for (p<-1 to 3) {baisseBrosse(), avance()};
                                       ^MethodsDogHouse:8: error: ';' expected but ',' found.
	for (p<-1 to 3) {baisseBrosse(), avance()};
                                       ^